--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,11 +8,11 @@ on:
     branches: [ main ]
 
 jobs:
-  hello-world:
+  hello-world:22f2000536@ds.study.iitm.ac.in
     runs-on: ubuntu-latest
     
     steps:
-      - name: youremailaddresshere
+      - name: 
         run: echo "Hello, world!"
         
       - name: Display date
